annotation toggle visibility fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -52,6 +52,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: white;
 }
 button:hover {
   border-color: #646cff;
@@ -59,6 +60,13 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.annon_button {
+  background: transparent;
+  padding: 0.4em 0.4em;
+  border-radius: 0;
+  margin-left: 8px;
 }
 
 select {
@@ -88,15 +96,15 @@ select {
   margin-left: 15px;
   margin-top: 15px;
   width: 200px;
-  color: #fff;
+  color: #000000;
   background: rgba(0, 0, 0, 0.8);
-  border-radius: 0.5em;
+  /* border-radius: 0.5em; */
   font-size: 12px;
   line-height: 1.2;
   transition: opacity 0.5s;
 
   /* For numbers */
-  &::before {
+  /* &::before {
     content: "1";
     position: absolute;
     top: -30px;
@@ -109,7 +117,7 @@ select {
     line-height: 30px;
     text-align: center;
     background: rgba(0, 0, 0, 0.8);
-  }
+  } */
 }
 
 #number {
@@ -123,19 +131,22 @@ select {
   left: -30px;
   width: 30px;
   height: 30px;
-  border: 2px solid #fff;
+  /* border: 2px solid #fff; */
   border-radius: 50%;
   font-size: 16px;
   line-height: 30px;
   text-align: center;
+  font-weight: 700;
+  color: #ffffff;
   background: rgba(0, 0, 0, 0.8);
 }
 
 .annon_content {
   padding: 1em;
+  border: 2px solid #000000;
 }
 
-.annotation-popup {
+.annon_popup {
   width: 400px;
   height: 500px;
   display: grid;
@@ -144,7 +155,7 @@ select {
   border: 1px solid #000000;
 }
 
-.annotation-popup-input {
+.annon_popup_input {
   width: 90%;
   min-height: 200px;
   padding: 10px;
